--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,35 @@
-* {
-    padding: 0;
-    margin: 0;
+:root{
+    display: block;   
 }
 
+*{
+    box-sizing: border-box;
+}
 
-header {
+label{
+    display: inline-block;
+}
+
+#header-text{
+    text-align: center;
+}
+
+h2, h6{
+    padding-bottom: .5rem;
+}
+
+.row{
     display: flex;
-    justify-content: center;
-    background-color: blue;
-    color: white;
-    margin: 0 auto;
+    flex-wrap: wrap;
+    padding: 0 .5rem;
 }
 
-.city-search {
-    color: black;
+.card{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.card-body{
+    height: 200px;
 }
